--- a/HopeBar/app/build.gradle
+++ b/HopeBar/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:21.0.3'
+    compile files('libs/PayPalAndroidSDK-2.9.10.jar')
 }
