--- a/HopeBar/app/src/main/AndroidManifest.xml
+++ b/HopeBar/app/src/main/AndroidManifest.xml
@@ -2,20 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rachelgully.hopebar" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,18 +42,28 @@
         </activity>
 
         <!-- PayPal Stuff -->
-        <service android:name="com.paypal.android.sdk.payments.PayPalService"
-            android:exported="false"/>
-        <activity android:name="com.paypal.android.sdk.payments.PaymentActivity"/>
-        <activity android:name="com.paypal.android.sdk.payments.LoginActivity"/>
-        <activity android:name="com.paypal.android.sdk.payments.PaymentMethodActivity"/>
-        <activity android:name="com.paypal.android.sdk.payments.PaymentConfirmActivity"/>
-        <activity android:name="com.paypal.android.sdk.payments.PayPalFuturePaymentActivity"/>
-        <activity android:name="com.paypal.android.sdk.payments.FuturePaymentConsentActivity"/>
-        <activity android:name="com.paypal.android.sdk.payments.FuturePaymentInfoActivity"/>
-        <activity android:name="io.card.payment.CardIOActivity"
-            android:configChanges="keyboardHidden|orientation"/>
-        <activity android:name="io.card.payment.DataEntryActivity"/>
+        <service
+            android:name="com.paypal.android.sdk.payments.PayPalService"
+            android:exported="false" />
+
+        <activity android:name="com.paypal.android.sdk.payments.PaymentActivity" />
+        <activity android:name="com.paypal.android.sdk.payments.LoginActivity" />
+        <activity android:name="com.paypal.android.sdk.payments.PaymentMethodActivity" />
+        <activity android:name="com.paypal.android.sdk.payments.PaymentConfirmActivity" />
+        <activity android:name="com.paypal.android.sdk.payments.PayPalFuturePaymentActivity" />
+        <activity android:name="com.paypal.android.sdk.payments.FuturePaymentConsentActivity" />
+        <activity android:name="com.paypal.android.sdk.payments.FuturePaymentInfoActivity" />
+        <activity
+            android:name="io.card.payment.CardIOActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity android:name="io.card.payment.DataEntryActivity" />
+        <activity
+            android:name=".MainScreen" >
+            <intent-filter>
+                <action android:name="com.tutorial.CLEARSCREEN"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
