--- a/HopeBar/app/src/main/AndroidManifest.xml
+++ b/HopeBar/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity">
@@ -41,6 +41,9 @@
             android:name=".Share"
             android:label="@string/title_activity_share" >
         </activity>
+
+        <activity android:name=".Purchase"
+            android:label="Payment"/>
 
         <!-- PayPal Stuff -->
         <service
