--- a/HopeBar/app/src/main/AndroidManifest.xml
+++ b/HopeBar/app/src/main/AndroidManifest.xml
@@ -39,7 +39,11 @@
         </activity>
         <activity
             android:name=".Share"
-            android:label="@string/title_activity_share" >
+            android:label="@string/title_activity_share">
+            <intent-filter>
+                <action android:name="android.intent.action.ALL_APPS"/>
+                <data android:mimeType="image/jpeg"/>
+            </intent-filter>
         </activity>
 
         <activity android:name=".Purchase"
